<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Toolbar -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/ac_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBar"
            android:elevation="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FFF"
                android:text="@string/contact"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:theme="@style/TextLarge.Bold"
                android:text="@string/parveen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:theme="@style/TextNormal"
                android:text="@string/company_address"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextNormal"
                android:text="@string/company_phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextNormal"
                android:text="@string/company_fax"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextNormal"
                android:text="@string/company_mobile"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextNormal"
                android:text="@string/company_email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextNormal"
                android:text="@string/company_site"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
