<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- Toolbar -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/am_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBar"
            android:elevation="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FFF"
                android:text="@string/app_name"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <!-- Button View -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- First Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Button Product -->
                <android.support.v7.widget.CardView
                    android:id="@+id/am_product_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.webhopers.minimaxplywood.views.SquareImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/img_btn_products"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="16dp"
                            android:theme="@style/TextNormal.Bold"
                            android:text="@string/products"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!-- Button About us -->
                <android.support.v7.widget.CardView
                    android:id="@+id/am_about_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.webhopers.minimaxplywood.views.SquareImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/img_btn_about"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="16dp"
                            android:theme="@style/TextNormal.Bold"
                            android:text="@string/about_us"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <!-- Second Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Button Contact -->
                <android.support.v7.widget.CardView
                    android:id="@+id/am_contact_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.webhopers.minimaxplywood.views.SquareImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/img_btn_contact"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="16dp"
                            android:theme="@style/TextNormal.Bold"
                            android:text="@string/contact"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!-- Empty -->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
